--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         }
         
         .hero-image::after {
-            content: ' MANGING DIRECT VANDANA  & DIRECT PRASHANT YADAV';
+            content: ' MANGING DIRECT VAANI  & DIRECT PRASHANT YADAV'
             position: absolute;
             bottom: 0;
             left: 0;
@@ -901,7 +901,7 @@
                 <h3 style="margin-bottom: 2rem;">What Clients Say</h3>
                 <div class="testimonial-card">
                     <p class="testimonial-text">VP-GLOBAL delivered our e-commerce platform ahead of schedule while exceeding all our requirements. His attention to detail and problem-solving skills are exceptional. We've seen a 40% increase in conversions since launch.</p>
-                    <div class="testimonial-author">VANDANA</div>
+                    <div class="testimonial-author">PRASHANT</div>
                     <div class="testimonial-role">CEO, RetailTech Solutions</div>
                 </div>
             </div>
