--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         }
         
         .hero-image::after {
-            content: ' MANGING DIRECT VAANI  & DIRECT PRASHANT YADAV'
+            content: ' MANGING DIRECT VAANI  & DIRECT PRASHANT YADAV';
             position: absolute;
             bottom: 0;
             left: 0;
